--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
     "deploy": "bash deploy.sh",
+    "commit": "bash commit.sh",
     "update": "bash update.sh"
   },
   "keywords": [],
